# agent-transfer

./: .gitignore  AGENT_TRANSFER_README.md  ARCHITECTURE.md  EDGE_CASE_HANDLING.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  PYTEST_IMPLEMENTATION.md  QUICK_REFERENCE_EDGE_CASES.md  QUICK_START.md  README.md  SELECTIVE_IMPORT_IMPLEMENTATION.md  STANDALONE_USAGE.md  TESTING.md  TEST_RESULTS.md  TEST_SUITE_SUMMARY.md  UI_PREVIEW.md  USER_STORIES.md  WORKFLOWS.md  agent-selector.py  agent-transfer.sh  execution_plan.json  find_agents.py  install.sh  pyproject.toml  pytest.ini  requirements.txt  tasks.md
.devkid/: config.json
.memory/: .pre-compact-discoveries.json
.specify/memory/: constitution.md
agent_transfer/: __init__.py  cli.py  models.py
agent_transfer/bootstrap/: init.py
agent_transfer/bridge/: __init__.py  briefing.py  capability_registry.py  compose.py  ingest.py  models.py  preview.py  rollback.py  secrets.py  selection_matrix.py  smoke_test.py
agent_transfer/doctor/: checks.py  inspect.py  playbook.py
discoverability/: README.md  install.sh  rule.md  skill.md
docs/: NLP_SEMANTIC_SEARCH_RESEARCH.md  worktree-isolation.md
prd/: agent-transfer-v2-platform-agnostic.md  pathfinder-module.md  preflight-check.md
scripts/: worktree-clean.sh
tests/: README.md  __init__.py  conftest.py  integration_test.sh  simple_integration_test.sh  test_all_identical.py.old  test_edge_cases.py.old  test_edge_cases_comprehensive.py  test_import_analyzer.py  test_import_selector.py.old  test_pathfinder.py  test_preflight.py  test_preflight_checker.py  test_preflight_collector.py  test_preflight_scanners.py  test_selective_import.py.old  test_selective_import_new.py  verify_edge_cases.sh
(+103 files in other folders)
